<package format="3">
  <name>path_searching</name>
  <version>0.0.0</version>
  <description>The path_searching package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>plan_env</depend>
  <depend>cv_bridge</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>
</package>
