<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<package format="2">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>The plan_env package</description>
  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<package format="3">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>The plan_env package</description>
  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>service_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>
</package>
