<package format="3">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>The plan_env package</description>
  <maintainer email="iszhouxin@zju.edu.cn">iszhouxin</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>service_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>
</package>
