<package format="3">
  <name>test</name>
  <version>0.0.0</version>
  <description>The test package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>traj_optimization</depend>
  <depend>cv_bridge</depend>
  <depend>Eigen3</depend>
</package>
