<package format="3">
  <name>traj_optimization</name>
  <version>0.0.0</version>
  <description>The traj_optimization package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>OsqpEigen</depend>
</package>
