<package format="3">
  <name>traj_server</name>
  <version>0.0.0</version>
  <description>The traj_server package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>traj_utils</depend>
  <depend>quadrotor_msgs</depend>
  <depend>Eigen3</depend>
</package>
