<?xml version="1.0"?>
<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<?xml version="1.0"?>
<package format="2">
  <name>fake_drone</name>
  <version>0.0.0</version>
  <description>The fake_drone package</description>
  <maintainer email="zzzx@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<package format="3">
  <name>fake_drone</name>
  <version>0.0.0</version>
  <description>The fake_drone package</description>
  <maintainer email="zzzx@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>Eigen3</depend>
</package>
