<package format="3">
  <name>fake_drone</name>
  <version>0.0.0</version>
  <description>The fake_drone package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
</package>
