<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<package>
  <version>0.0.0</version>
  <name>odom_visualization</name>
  <description>
    odom_visualization
  </description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/odom_visualization</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pose_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pose_utils</run_depend>

</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<package format="3">
  <name>odom_visualization</name>
  <version>0.0.0</version>
  <description>odom_visualization</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>Armadillo</depend>
</package>
