<package format="3">
  <name>odom_visualization</name>
  <version>0.0.0</version>
  <description>odom_visualization</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>Armadillo</depend>
</package>
