<package format="3">
  <name>so3_disturbance_generator</name>
  <version>0.0.0</version>
  <description>so3_disturbance_generator</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>Armadillo</depend>
</package>
