<?xml version="1.0"?>
<!-- ======= ROS1 VERSION (commented out) ======= -->
<!--
<package>
  <version>0.0.0</version>
  <name>so3_quadrotor_simulator</name>
  <description>
    quadrotor_simulator
  </description>

  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/quadrotor_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>uav_utils</build_depend>
  <build_depend>cmake_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>uav_utils</run_depend>
  <run_depend>cmake_utils</run_depend>

</package>
-->

<!-- ======= ROS2 VERSION ======= -->
<package format="3">
  <name>so3_quadrotor_simulator</name>
  <version>0.0.0</version>
  <description>quadrotor_simulator</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>uav_utils</depend>
  <depend>cmake_utils</depend>
  <depend>Eigen3</depend>
  <depend>Armadillo</depend>
</package>
