<package format="3">
  <name>so3_quadrotor_simulator</name>
  <version>0.0.0</version>
  <description>quadrotor_simulator</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>uav_utils</depend>
  <depend>cmake_utils</depend>
  <depend>Eigen3</depend>
  <depend>Armadillo</depend>
</package>
