<package format="3">
  <name>cmake_utils</name>
  <version>0.0.0</version>
  <description>Once you used this package, then you do not need to copy cmake files among packages</description>
  <maintainer email="william.wu@dji.com">William.Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
</package>
